--- a/templates/docs.html
+++ b/templates/docs.html
@@ -11,6 +11,11 @@
             padding: 0;
             margin: 0;
         }
+
+        html {
+            scroll-behavior: smooth;
+            scroll-padding-top: 90px
+        }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
 </head>
