--- a/templates/docs.html
+++ b/templates/docs.html
@@ -64,6 +64,10 @@
     {{ config | safe }}
     {{ scripts | safe }}
     {{ renderer | safe }}
+    <script>
+        window.sizeMap = {1:"xs", 2:"sm", 3:"md", 4:"lg", 5:"xl"};
+        window.colorMap = {'#25262b': 'dark', '#868e96': 'gray', '#fa5252': 'red', '#e64980': 'pink', '#be4bdb': 'grape', '#7950f2': 'violet', '#4c6ef5': 'indigo', '#228ae6': 'blue', '#15abbf': 'cyan', '#12b886': 'teal', '#3fbf57': 'green', '#82c91e': 'lime', '#fab005': 'yellow', '#fc7d14': 'orange'}
+    </script>
 </footer>
 
 </html>
