--- a/templates/docs.html
+++ b/templates/docs.html
@@ -43,10 +43,14 @@
             }
         }
 
-        @media only screen and (max-width: 672px) {
+        @media only screen and (max-width: 750px) {
             #header-right-section {
                 display: none;
             }
+        }
+
+        .mantine-Prism-line.token-line {
+            width: auto
         }
     </style>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
