--- a/assets/styles.css
+++ b/assets/styles.css
@@ -34,3 +34,14 @@ input:invalid {
         margin-left: 0;
     }
 }
+
+.dmc-bar {
+    background-image: linear-gradient(to right, yellow, orange);
+}
+
+.dmc-thumb {
+    border-color: orange;
+    height: 20px;
+    width: 20px;
+    background-color: white;
+}
