--- a/assets/styles.css
+++ b/assets/styles.css
@@ -35,6 +35,40 @@ input:invalid {
     }
 }
 
+.demo-container {
+    display: flex;
+    max-width: 100%;
+    overflow: hidden;
+}
+
+.demo-preview {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    justify-content: center;
+}
+
+.demo-controls {
+    width: 250px;
+    padding: 20px;
+    gap: 10px;
+}
+
+.demo-control {
+    margin: 10px;
+}
+
+@media only screen and (max-width: 750px) {
+    .demo-container {
+        flex-direction: column;
+    }
+
+    .demo-controls {
+        width: 100%;
+    }
+}
+
 .dmc-bar {
     background-image: linear-gradient(to right, yellow, orange);
 }
