--- a/assets/m2d.css
+++ b/assets/m2d.css
@@ -3,21 +3,23 @@ h2.m2d-heading {
     font-size: 30px;
 }
 
-h3.m2d-heading, h5.m2d-heading {
+h5.m2d-heading {
     font-weight: 500;
     margin-top: 30px;
-    margin-bottom: 10px;
+    margin-bottom: 15px;
 }
 
 h4.m2d-heading {
     font-weight: 400;
-    margin-bottom: 10px;
-    margin-top: 20px;
+    margin-bottom: 15px;
+    margin-top: 30px;
 }
 
 h3.m2d-heading {
     font-weight: 400;
+    margin-top: 40px;
     font-size: 20px;
+    margin-bottom: 15px;
 }
 
 .m2d-paragraph, .m2d-list {
