Refactored the theming

--- a/help_center/theme/assets/theme.css
+++ b/help_center/theme/assets/theme.css
@@ -9,3 +9,21 @@
     color: var(--mantine-color-white);
   }
 }
+
+
+/* Use `&:focus` when you want focus ring to be visible when control is clicked */
+.focus {
+  &:focus {
+    outline: 2px solid var(--mantine-color-red-filled);
+    outline-offset: 3px;
+  }
+}
+
+/* Use `&:focus-visible` when you want focus ring to be visible
+   only when user navigates with keyboard, for example by pressing Tab key */
+.focus-auto {
+  &:focus-visible {
+    outline: 2px solid var(--mantine-color-red-filled);
+    outline-offset: 2px;
+  }
+}
