--- a/help_center/theme/assets/theme.css
+++ b/help_center/theme/assets/theme.css
@@ -27,3 +27,14 @@
     outline-offset: 2px;
   }
 }
+
+.change-heading-demo {
+  &:is(h1) {
+    font-family: GreycliffCF, sans-serif;
+    font-weight: 900;
+  }
+
+  &:is(h5, h6) {
+    color: var(--mantine-color-dimmed);
+  }
+}
