added responsive styles section

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -167,3 +167,39 @@ input:invalid {
     color: var(--mantine-color-white);
   }
 }
+
+.media-query-demo  {
+  background-color: var(--mantine-color-blue-filled);
+  color: var(--mantine-color-white);
+  padding: var(--mantine-spacing-md);
+  text-align: center;
+
+  @media (min-width: 48em) {
+    background-color: var(--mantine-color-red-filled);
+  }
+}
+
+.container-query-demo-root {
+  min-width: 200px;
+  max-width: 100%;
+  min-height: 120px;
+  container-type: inline-size;
+  overflow: auto;
+  resize: horizontal;
+  border: solid;
+  border-color: var(--mantine-color-default-border)
+}
+
+.container-query-demo-child {
+  background-color: var(--mantine-color-dimmed);
+  color: var(--mantine-color-white);
+  padding: var(--mantine-spacing-md);
+
+  @container (max-width: 500px) {
+    background-color: var(--mantine-color-blue-filled);
+  }
+
+  @container (max-width: 300px) {
+    background-color: var(--mantine-color-red-filled);
+  }
+}
