add button custom variants

--- a/help_center/theme/assets/theme.css
+++ b/help_center/theme/assets/theme.css
@@ -10,6 +10,19 @@
   }
 }
 
+.button-custom-variants {
+  &[data-variant='danger'] {
+    background-color: var(--mantine-color-red-9);
+    color: var(--mantine-color-red-0);
+  }
+
+  &[data-variant='primary'] {
+    background: linear-gradient(45deg, #4b6cb7 10%, #253b67 90%);
+    color: var(--mantine-color-white);
+    border-width: 0;
+  }
+}
+
 
 /* Use `&:focus` when you want focus ring to be visible when control is clicked */
 .focus {
@@ -39,23 +52,4 @@
   }
 }
 
-
-
-.shadow-input {
-   border-color: transparent;
-
-    &:focus-within {
-      outline: 1px solid black;;
-      border-color: transparent;
-  }
-}
-
-.task-container:has(.mantine-Checkbox-root[data-checked]) .mantine-TextInput-input {
-    text-decoration: line-through;
-    color: gray;
-}
-
-.task-del-button:hover {
-    color: red;
-}
 
