--- a/assets/styles.css
+++ b/assets/styles.css
@@ -203,3 +203,17 @@ input:invalid {
     background-color: var(--mantine-color-red-filled);
   }
 }
+
+
+.buttton-custom-variant {
+  &[data-variant='danger'] {
+    background-color: var(--mantine-color-red-9);
+    color: var(--mantine-color-red-0);
+  }
+
+  &[data-variant='primary'] {
+    background: linear-gradient(45deg, #4b6cb7 10%, #253b67 90%);
+    color: var(--mantine-color-white);
+    border-width: 0;
+  }
+}
