add light-dark colors section

--- a/assets/examples/light-dark-var.css
+++ b/assets/examples/light-dark-var.css
@@ -17,7 +17,20 @@ You can also use mantine colors
 :root[data-mantine-color-scheme="dark"] {
   --my-light-dark-colors: var(--mantine-color-blue-1);
 }
+*/
 
+
+/*
+The  --mantine-color-body CSS variable is used for body background and as background color
+ of some components (Modal, Paper, etc.).  You can change it like this:
+
+:root {
+  --mantine-color-body: #f9f9f9;
+}
+
+:root[data-mantine-color-scheme="dark"] {
+  --mantine-color-body: #333;
+}
 
 
 */
