--- a/assets/examples/light-dark-demo.css
+++ b/assets/examples/light-dark-demo.css
@@ -1,9 +1,9 @@
 /* applied in light color-scheme */
 .light-dark-demo {
-    background-color: yellow
+    background-color: #ffec99
 }
 
 /* applied in dark color-scheme */
-[data-mantine-color-scheme='dark'] .light-dark-demo {
-     background-color: red
+ [data-mantine-color-scheme='dark'] .light-dark-demo {
+     background-color: #ff6b6b
 }
