--- a/assets/styles.css
+++ b/assets/styles.css
@@ -212,3 +212,11 @@ input:invalid {
 :root[data-mantine-color-scheme="dark"] {
   --my-light-dark-gray-background: var(--mantine-color-dark-5);
 }
+
+
+.homepage-tile {
+  &:hover {
+      background-color: var(--my-light-dark-gray-background);
+     transition: background-color 0.2s ease;
+  }
+}
