--- a/assets/m2d.css
+++ b/assets/m2d.css
@@ -90,8 +90,8 @@ h3.m2d-heading {
 }
 
 .m2d-thematic-break {
-   margin-top: 10px;
-   margin-bottom: 10px;
+   margin-top: 20px;
+   margin-bottom: 20px;
 }
 
 
@@ -106,4 +106,11 @@ h3.m2d-heading {
     color: var(--mantine-color-gray-7);
     background: var(--mantine-color-gray-0);
 }
+
+
+.m2d-block-image {
+ margin-top: 38px;
+ margin-bottom: 38px;
+}
+
 
